# pypfda

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml
docs/: conf.py  index.md  installation.md  quickstart.md
docs/api/: index.md
docs/theory/: particle_filter.md
docs/tutorials/: 01_lorenz63.md  01_lorenz96.md  02_paper_claims_on_l96.md
examples/: 01_quickstart.py  02_lorenz63_twin.py  02_lorenz96_twin.py  03_lorenz96_twin.py  04_l96_cycle_sensitivity.py  05_l96_diversity_memory.py  06_l96_diverse_ics.py  07_l96_nyquist.py  _l96_common.py
reproduce/: README.md  download_data.sh
src/pypfda/: __init__.py  filter.py  localization.py  resampling.py  weights.py
src/pypfda/diagnostics/: __init__.py
src/pypfda/io/: __init__.py
src/pypfda/paleo/: __init__.py
tests/: conftest.py  test_filter.py  test_localization.py  test_resampling.py  test_weights.py
