[build-system]
requires = ["hatchling>=1.21", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "pypfda"
dynamic = ["version"]
description = "Particle filter data assimilation for sequential state estimation, with paleoclimate applications."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Bijan Fallah", email = "bijan.fallah01@gmail.com" },
]
maintainers = [
    { name = "Bijan Fallah", email = "bijan.fallah01@gmail.com" },
]
keywords = [
    "data assimilation",
    "particle filter",
    "sequential Monte Carlo",
    "ensemble methods",
    "paleoclimate",
    "AMOC",
    "climate",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
io = [
    "netCDF4>=1.6",
    "xarray>=2023.1",
    "pyyaml>=6.0",
]
plot = [
    "matplotlib>=3.7",
]
paleo = [
    "pandas>=2.0",
    "pypfda[io,plot]",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.92",
    "ruff>=0.5",
    "mypy>=1.8",
    "pre-commit>=3.5",
    "codespell>=2.2",
    "pip-licenses>=4.3",
]
docs = [
    "sphinx>=7.2",
    "furo>=2024.1.29",
    "myst-parser>=2.0",
    "myst-nb>=1.0",
    "sphinx-design>=0.5",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=2.0",
]
all = ["pypfda[io,plot,paleo,dev,docs]"]

[project.urls]
Homepage = "https://github.com/bijanf/pypfda"
Documentation = "https://bijanf.github.io/pypfda"
Repository = "https://github.com/bijanf/pypfda"
Issues = "https://github.com/bijanf/pypfda/issues"
Changelog = "https://github.com/bijanf/pypfda/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pypfda/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pypfda"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pypfda",
    "tests",
    "docs",
    "examples",
    "reproduce",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "CITATION.cff",
    "pyproject.toml",
]

# ----------------------- ruff (linter + formatter) ----------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["docs/_build", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle + pyflakes
    "I",               # isort
    "N",               # pep8-naming
    "UP",              # pyupgrade
    "B",               # flake8-bugbear
    "A",               # flake8-builtins
    "C4",              # flake8-comprehensions
    "SIM",             # flake8-simplify
    "PTH",             # flake8-use-pathlib
    "RET",             # flake8-return
    "RUF",             # ruff-specific rules
    "D",               # pydocstyle
    "NPY",             # numpy-specific
]
ignore = [
    "D203",  # 1 blank line before class (conflicts with D211)
    "D213",  # multi-line summary on second line (conflicts with D212)
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "B011"]
"examples/**" = ["D", "INP001"]
"reproduce/**" = ["D", "INP001"]
"docs/conf.py" = ["D", "INP001", "A001"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ------------------------------- mypy -----------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
files = ["src/pypfda"]

[[tool.mypy.overrides]]
module = ["scipy.*", "matplotlib.*", "netCDF4.*", "xarray.*"]
ignore_missing_imports = true

# ------------------------------ pytest ----------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:numpy.*",
]

# ----------------------------- coverage ---------------------------------
[tool.coverage.run]
branch = true
source = ["pypfda"]
omit = [
    "src/pypfda/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
fail_under = 80

# ---------------------------- codespell ---------------------------------
[tool.codespell]
skip = "*.pyc,*.lock,docs/_build,build,dist"
ignore-words-list = "fro,nd,thi"
